"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-01-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69-chpsim-02-02:
	  This patch assigns some questionably reasonable default delay
		value per event, based on event type.  
	  One test-case added to test/chpsim.


	* HACKT-00-01-04-main-00-80-69-chpsim-02-01:
	  New branch for second round of chpsim development.
	  Split up TODO into sim/prsim/TODO and sim/chpsim/TODO.
	  chpsim EventNode: added delay member with default value, 
		currently not set, but will be set during state-construction, 
		possibly overrideable at simulation time.  
	  chpsim command:
		'timing' <mode> -- set/get timing mode of sim.
			Added timing mode support to CHPSIM::State.
		Added one small (silent) test case for random timing.  
	  chpsim dot-graph: added option to display delays of events.  


2007-01-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-69:
	  No source revision.  Build system maintainence.  
	  Re-organized make scripts, with better internal re-usability.  
		Some targets were falsely built in the srcdir, 
		now fixed with srcdir_strip macro.  
	  .cvsignores now reference the $(srcdir), long forgotten update.


2007-01-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-68:
	  No source revision.  Only documentation tidbits.  


2007-01-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-67:
	  DO NOT USE flex 2.5.33.  I hereby blacklist it.  2.5.31 is ok.
	  Retested for flex-2.5.33, which has some issues, 
		but is now commonplace in distributions.  
		It still suffers from undefined __STDC_VERSION__ in
		C++ mode and a sign/unsigned comparison warning that is
		promoted to an error.  With this patch, passing
		CXXFLAGS=...-Wno-error should suffice to compile everything.