@@ -1,0 +1,81 @@
+	0	0	0	null
+	10	1	1	bool_source_constant::S!(true)
+	10	2	2	int_source::S!(0)
+	10	16	3	
+	20	14	3	bool_split_select::C?(bool_split_select::c)
+	20	15	3	bool_split_select::I?(bool_split_select::x)
+	30	5	2	int_source::S!(1)
+	30	1	1	bool_source_constant::S!(true)
+	30	13	3	
+	40	8	3	bool_split_select::O[0]!(bool_split_select::x)
+	50	6	4	bool_sink::B?(bool_sink::b)
+	50	7	3	null
+	60	16	3	
+	70	14	3	bool_split_select::C?(bool_split_select::c)
+	70	15	3	bool_split_select::I?(bool_split_select::x)
+	80	4	2	int_source::S!(2)
+	80	1	1	bool_source_constant::S!(true)
+	80	13	3	
+	90	9	3	bool_split_select::O[1]!(bool_split_select::x)
+	100	7	3	null
+	100	17	5	bool_sink::B?(bool_sink::b)
+	110	16	3	
+	120	14	3	bool_split_select::C?(bool_split_select::c)
+	120	15	3	bool_split_select::I?(bool_split_select::x)
+	130	3	2	int_source::S!(3)
+	130	1	1	bool_source_constant::S!(true)
+	130	13	3	
+	140	10	3	bool_split_select::O[2]!(bool_split_select::x)
+	150	7	3	null
+	150	18	6	bool_sink::B?(bool_sink::b)
+	160	16	3	
+	170	14	3	bool_split_select::C?(bool_split_select::c)
+	170	15	3	bool_split_select::I?(bool_split_select::x)
+	180	2	2	int_source::S!(0)
+	180	1	1	bool_source_constant::S!(true)
+	180	13	3	
+	190	11	3	bool_split_select::O[3]!(bool_split_select::x)
+	200	7	3	null
+	200	19	7	bool_sink::B?(bool_sink::b)
+	210	16	3	
+	220	14	3	bool_split_select::C?(bool_split_select::c)
+	220	15	3	bool_split_select::I?(bool_split_select::x)
+	230	5	2	int_source::S!(1)
+	230	1	1	bool_source_constant::S!(true)
+	230	13	3	
+	240	8	3	bool_split_select::O[0]!(bool_split_select::x)
+	250	6	4	bool_sink::B?(bool_sink::b)
+	250	7	3	null
+	260	16	3	
+	270	14	3	bool_split_select::C?(bool_split_select::c)
+	270	15	3	bool_split_select::I?(bool_split_select::x)
+	280	4	2	int_source::S!(2)
+	280	1	1	bool_source_constant::S!(true)
+	280	13	3	
+	290	9	3	bool_split_select::O[1]!(bool_split_select::x)
+	300	7	3	null
+	300	17	5	bool_sink::B?(bool_sink::b)
+	310	16	3	
+	320	14	3	bool_split_select::C?(bool_split_select::c)
+	320	15	3	bool_split_select::I?(bool_split_select::x)
+	330	3	2	int_source::S!(3)
+	330	1	1	bool_source_constant::S!(true)
+	330	13	3	
+	340	10	3	bool_split_select::O[2]!(bool_split_select::x)
+	350	7	3	null
+	350	18	6	bool_sink::B?(bool_sink::b)
+	360	16	3	
+	370	14	3	bool_split_select::C?(bool_split_select::c)
+	370	15	3	bool_split_select::I?(bool_split_select::x)
+	380	2	2	int_source::S!(0)
+	380	1	1	bool_source_constant::S!(true)
+	380	13	3	
+	390	11	3	bool_split_select::O[3]!(bool_split_select::x)
+	400	7	3	null
+	400	19	7	bool_sink::B?(bool_sink::b)
+	410	16	3	
+	420	14	3	bool_split_select::C?(bool_split_select::c)
+	420	15	3	bool_split_select::I?(bool_split_select::x)
+	430	5	2	int_source::S!(1)
+	430	1	1	bool_source_constant::S!(true)
+time: 430
