@@ -1,5 +1,5 @@
 # "test/chpsim/testlib/Makefile.am"
-#	$Id: Makefile.am,v 1.3 2007/01/23 02:43:38 fang Exp $
+#	$Id: Makefile.am,v 1.3.2.1 2007/01/27 06:33:46 fang Exp $
 # Test auto-Makefile for chpsim.  
 
 include $(top_srcdir)/test/Make.test-head
@@ -8,7 +8,8 @@ HACKT_PARSE_TEST_PASSES = \
 	bool-and bool-or bool-xor \
 	bool-copy bool-source bool-sink \
 	bool-split bool-merge \
-	bool-copy-test
+	bool-copy-test \
+	int-source
 
 HACKT_CREATE_TEST_PASSES = \
 	bool-copy-test
