@@ -1,21 +1,29 @@
 // "bool-split.hac"
-//	$Id: bool-split.hac,v 1.2 2007/01/21 06:04:19 fang Exp $
+//	$Id: bool-split.hac,v 1.2.2.1 2007/01/27 06:33:49 fang Exp $
 // conditional routing
 
-// TODO: use log(N) bits for select channel
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+/**
+	TODO: use log(N) bits for select channel
+	This version is written using array indexing on channels.
+	An out-of-bounds access should trigger a run-time error.  
+ */
 template <pint N>
 defproc bool_split (chan?(int) C; chan?(bool) I; chan!(bool) O[N]) {
 int c;
 bool x;
 chp {
 *[ C?(c),I?(x);
-//	[ []:i:N: (c == i) -> O[i]!(x) ]
 	O[c]!(x)
 ]
 }
 }
 
-// two-way split
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+/**
+	Two-way split.
+	Specialized to use a bool control channel.  
+ */
 defproc bool_split_2 (chan?(bool) C, I; chan!(bool) O[2]) {
 bool c, x;
 chp {
@@ -23,6 +31,22 @@ chp {
 	[ c -> O[1]!(x)
 	[] else -> O[0]!(x)
 	]
+]
+}
+}
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+/**
+	This version is written using deterministic selection.  
+	An out-of-bounds access will simply cause deadlock.  
+ */
+template <pint N>
+defproc bool_split_select (chan?(int) C; chan?(bool) I; chan!(bool) O[N]) {
+int c;
+bool x;
+chp {
+*[ C?(c),I?(x);
+	[ [] i:N: (c == i) -> O[i]!(x) ]
 ]
 }
 }
